@@ -1,3 +1,4 @@
+* allow naming of simulation materials (Powder, Layer)
 * example script for fitting diffraction data of an epitaxial multilayer (by @VeryBitter)
 * update AlAs lattice parameters from APL 66, 682 (1995) (by @VeryBitter)
 * enable building Python 3.11 wheels
